--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@
   display: inline;
 }
 
+.App__content {
+  display: flex;
+}
+
 .App-header {
   display: inline;
 }
@@ -75,4 +79,14 @@ header ul, header li {
 header {
   margin-bottom: 100px;
   border-bottom: black solid 1px;
+}
+
+nav {
+  margin-top: 50px;
+  margin-right: 10px;
+  width: 10em;
+}
+
+.App-main {
+  width: 90em;
 }
